# agents-course

./: .gitignore  pyproject.toml
examples/: async_quickstart.ipynb
examples/crewai_examples/: debate_agent.ipynb  pesquisador_financeiro.ipynb
examples/crewai_examples/debate_brabo/: README.md  pyproject.toml
examples/crewai_examples/debate_brabo/output/: contra_proposta.md  juiz.md  proposta.md
examples/crewai_examples/debate_brabo/src/debate_brabo/: crew.py  main.py
examples/crewai_examples/debate_brabo/src/debate_brabo/config/: agents.yaml  tasks.yaml
examples/langgraph-examples/: memory_checkpoint.ipynb  memory_sqlite.ipynb  quickstart.ipynb  simple_chat.ipynb  tools_example.ipynb
examples/langgraph-examples/playwright_exp/: graph_constructor.py  graph_state.py  llms.py  main.py  nodes.py  tools.py
examples/mcp_examples/: memory_as_mcp.ipynb  quickstart.ipynb
examples/mcp_examples/sandbox/: lugares.md
examples/openai_agents_sdk_examples/: deep_research.ipynb  guardrails.ipynb  quickstart.ipynb  telegram_agent.ipynb
week1/: day1.ipynb  day2.ipynb
