[project]
name = "agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.152.0",
    "crewai-tools>=0.60.0",
    "dotenv>=0.9.9",
    "gradio>=5.42.0",
    "groq>=0.30.0",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "ollama>=0.5.1",
    "openai>=1.98.0",
    "openai-agents>=0.2.4",
]
