[project]
name = "debate_brabo"
version = "0.1.0"
description = "debate-brabo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
debate_brabo = "debate_brabo.main:run"
run_crew = "debate_brabo.main:run"
train = "debate_brabo.main:train"
replay = "debate_brabo.main:replay"
test = "debate_brabo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
